--- a/serverside/routing.hbs
+++ b/serverside/routing.hbs
@@ -16,7 +16,7 @@ func main() {
 		fs.ServeHTTP(w, r)
 	})
 
-	if err := http.ListenAndServe("{{port}}", nil); err != nil {
+	if err := http.ListenAndServe(":{{port}}", nil); err != nil {
 		log.Fatal(err)
 	}
 }
