--- a/serverside/routing.hbs
+++ b/serverside/routing.hbs
@@ -7,7 +7,7 @@ import (
 )
 
 func main() {
-	fmt.Printf("Starting server at port {{port}}\n")
+	{{init_behaviour}}
 	fs := http.FileServer(http.Dir("{{directory}}"))
 	http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
 		if r.URL.Path != "/" {
@@ -17,6 +17,6 @@ func main() {
 	})
 
 	if err := http.ListenAndServe(":{{port}}", nil); err != nil {
-		log.Fatal(err)
+		{{fail_behaviour}}
 	}
 }
