--- a/serverside/page.hbs
+++ b/serverside/page.hbs
@@ -5,6 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{title}}</title>
+	<link rel="stylesheet" href="styles/index.css">
+	{{#each additional_css}}
+	<link rel="stylesheet" href="{{this}}">
+	{{/each}}
 </head>
 <body>
 	{{content}}
