fix: Display returned errors when panicking
feat(styles): Add Basic styling

--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -8,7 +8,7 @@
 	<title>{{page.title}}</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Italiana&family=Tilt+Neon&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles/index.css">
 	{{#each page.additional_css}}
 	<link rel="stylesheet" href="{{this}}">
