feat(config): Add syntax highlighting support (`highlight.js`)

--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -13,6 +13,8 @@
 	{{#each page.additional_css}}
 	<link rel="stylesheet" href="{{this}}">
 	{{/each}}
+	
+	
 	{{#if misc.latex}}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
 		integrity="sha384-9eLZqc9ds8eNjO3TmqPeYcDj8n+Qfa4nuSiGYa6DjLNcv9BtN69ZIulL9+8CqC9Y" crossorigin="anonymous">
@@ -24,7 +26,7 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
 		integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05"
 		crossorigin="anonymous"></script>
-	<script>
+	<script defer>
 		document.addEventListener("DOMContentLoaded", function () {
 			renderMathInElement(document.body, {
 				delimiters: [
@@ -37,6 +39,15 @@
 		});
 	</script>
 	{{/if}}
+	
+	
+	{{#if misc.syntax_highlighting}}
+	<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/default.min.css">
+	<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
+	<script>hljs.highlightAll();</script>
+	{{/if}}
+	
 	{{misc.additional_html_header}}
 </head>
 
