chore: Rename `styles` to `src-styles` & Now a built styles directory is available in `templates/styles`

--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -1,4 +1,4 @@
-// Use `sass styles:<YOUR TESTING DIR>/styles` to build
+// Use `sass styles:templates/styles` to build
 
 p
 	font-family: 'Tilt Neon', cursive
