--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -6,3 +6,36 @@ p
 h1
 	font-family: 'Italiana', serif
 
+.wrapper
+	display: grid
+	overflow: hidden
+	grid-template-columns: 15% 85%
+	gap: 1vw
+
+.wawasidebar
+	height: 100%
+	border-right: 1px solid
+	border-image: linear-gradient(to bottom, #DBBFFF, #A66FED) 1 100%
+	height: 100vw
+
+	ul
+		padding-left: 5%
+	
+	li
+		list-style: none
+		a
+			font-family: "Tilt Neon", cursive
+			opacity: 80%
+			color: black
+
+		a:link
+			text-decoration: none
+			background: transparent
+
+		a:hover
+			background-image: linear-gradient(to right, rgb(219, 191, 255, 0.8), rgb(166, 111, 237, 0.8)) 
+			text-decoration: dashed
+
+
+.main-content
+	height: 100vh
