--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -6,4 +6,41 @@ h1 {
   font-family: "Italiana", serif;
 }
 
+.wrapper {
+  display: grid;
+  overflow: hidden;
+  grid-template-columns: 15% 85%;
+  gap: 1vw;
+}
+
+.wawasidebar {
+  height: 100%;
+  border-right: 1px solid;
+  border-image: linear-gradient(to bottom, #DBBFFF, #A66FED) 1 100%;
+  height: 100vw;
+}
+.wawasidebar ul {
+  padding-left: 5%;
+}
+.wawasidebar li {
+  list-style: none;
+}
+.wawasidebar li a {
+  font-family: "Tilt Neon", cursive;
+  opacity: 80%;
+  color: black;
+}
+.wawasidebar li a:link {
+  text-decoration: none;
+  background: transparent;
+}
+.wawasidebar li a:hover {
+  background-image: linear-gradient(to right, rgba(219, 191, 255, 0.8), rgba(166, 111, 237, 0.8));
+  text-decoration: dashed;
+}
+
+.main-content {
+  height: 100vh;
+}
+
 /*# sourceMappingURL=index.css.map */
