fix!: change project name

--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -12,7 +12,7 @@ h1
 	grid-template-columns: 15% 85%
 	gap: 1vw
 
-.wawasidebar
+.cutesidebar
 	height: 100%
 	border-right: 1px solid
 	border-image: linear-gradient(to bottom, #DBBFFF, #A66FED) 1 100%
