--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -53,7 +53,7 @@
 <body>
 	{{!-- Sidebar --}}
 	<div class="wrapper">
-		<div class="wawasidebar">
+		<div class="cutesidebar">
 			<ul>
 
 			{{#each sidebar.map}}
