--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -13,28 +13,28 @@ h1 {
   gap: 1vw;
 }
 
-.wawasidebar {
+.cutesidebar {
   height: 100%;
   border-right: 1px solid;
   border-image: linear-gradient(to bottom, #DBBFFF, #A66FED) 1 100%;
   height: 100vw;
 }
-.wawasidebar ul {
+.cutesidebar ul {
   padding-left: 5%;
 }
-.wawasidebar li {
+.cutesidebar li {
   list-style: none;
 }
-.wawasidebar li a {
+.cutesidebar li a {
   font-family: "Tilt Neon", cursive;
   opacity: 80%;
   color: black;
 }
-.wawasidebar li a:link {
+.cutesidebar li a:link {
   text-decoration: none;
   background: transparent;
 }
-.wawasidebar li a:hover {
+.cutesidebar li a:hover {
   background-image: linear-gradient(to right, rgba(219, 191, 255, 0.8), rgba(166, 111, 237, 0.8));
   text-decoration: dashed;
 }
