--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -2,6 +2,26 @@ p {
   font-family: "Tilt Neon", cursive;
 }
 
+@media only screen and (max-width : 1024px) {
+  p {
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width : 768px) {
+  p {
+    font-size: 19px;
+  }
+}
+@media only screen and (max-width : 600px) {
+  p {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width : 480px) {
+  p {
+    font-size: 18px;
+  }
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: "Italiana", serif;
 }
