--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -61,6 +61,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .main-content {
   height: 100vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
 /*# sourceMappingURL=index.css.map */
