fix(styles): Fix font family on elements other than `<p>` (like `li`)

--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -5,7 +5,7 @@ $media-tablet: "only screen and (max-width : 768px)"
 $media-mobile: "only screen and (max-width : 600px)"
 $media-mobile-sm: "only screen and (max-width : 480px)"
 
-p
+*
 	font-family: 'Tilt Neon', cursive
 
 @media #{$media-desktop}
