fix(styles): Fix font family for inline code fragments.

--- a/templates/styles/index.css
+++ b/templates/styles/index.css
@@ -65,4 +65,8 @@ h1, h2, h3, h4, h5, h6 {
   padding-right: 10vw;
 }
 
+code {
+  font-family: "Courier New", Courier, monospace;
+}
+
 /*# sourceMappingURL=index.css.map */
