--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -62,3 +62,6 @@ h1, h2, h3, h4, h5, h6
 	height: 100vh
 	padding-left: 10vw
 	padding-right: 10vw
+
+code
+	font-family: 'Courier New', Courier, monospace
