--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -65,3 +65,8 @@ h1, h2, h3, h4, h5, h6
 
 code
 	font-family: 'Courier New', Courier, monospace
+
+span .katex *
+	font-family: "Playfair Display", serif
+	font-size: x-large
+	
