--- a/templates/page.html.hbs
+++ b/templates/page.html.hbs
@@ -6,9 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{page.title}}</title>
+	{{!-- Import Fonts --}}
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Italiana&family=Tilt+Neon&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Italiana&family=Playfair+Display&family=Tilt+Neon&display=swap"
+		rel="stylesheet">
+
 	<link rel="stylesheet" href="styles/index.css">
 	{{#each page.additional_css}}
 	<link rel="stylesheet" href="{{this}}">
