feat: Create admonishments (inspired by mdbook-admonish)

--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -1,4 +1,7 @@
-// Use `sass styles:templates/styles` to build
+// Use `sass src-styles/index.sass:templates/styles/index.css` to build
+
+@import "./material-color.scss"
+@import "./admonitions.scss"
 
 $media-desktop: "only screen and (max-width : 1024px)"
 $media-tablet: "only screen and (max-width : 768px)"
