--- a/src-styles/index.sass
+++ b/src-styles/index.sass
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6
 	padding-left: 10vw
 	padding-right: 10vw
 
-code
+code *
 	font-family: 'Courier New', Courier, monospace
 
 span .katex *
